--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,5 @@ jobs:
       - name: Build template
         uses: xu-cheng/latex-action@master
         with:
-          root_file: _template/paper.tex
+          root_file: paper.tex
+          working_directory: _template
